--- a/index.html
+++ b/index.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Unified Dynamics Laboratory</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Unified Dynamics Laboratory (UDLab)</title>
   <style>
     body {
       font-family: sans-serif;
-      background: #f9f9f9;
+      background-color: #f8f8f8;
+      color: #222;
+      margin: 0;
+      padding: 0;
       text-align: center;
-      padding: 50px;
+    }
+    header {
+      background: #003366;
+      color: white;
+      padding: 40px 20px;
     }
     h1 {
-      color: #222;
+      margin: 0;
       font-size: 2.5em;
     }
-    p {
-      font-size: 1.2em;
-      color: #555;
+    section {
+      max-width: 800px;
+      margin: auto;
+      padding: 40px 20px;
+      text-align: left;
     }
     footer {
-      margin-top: 40px;
       font-size: 0.9em;
-      color: #aaa;
+      color: #777;
+      padding: 20px;
+    }
+    a {
+      color: #003366;
     }
   </style>
 </head>
 <body>
-  <h1>Unified Dynamics Laboratory (UDLab)</h1>
-  <p>Independent Research Initiative in Fundamental Physics</p>
-  <p>Contact: <a href="mailto:cesar.mello@udlab.org">cesar.mello@udlab.org</a></p>
-  <footer>&copy; 2025 Unified Dynamics Laboratory</footer>
+  <header>
+    <h1>Unified Dynamics Laboratory (UDLab)</h1>
+    <p>Independent Research in Foundational Physics</p>
+  </header>
+
+  <section>
+    <h2>About</h2>
+    <p>The UDLab is dedicated to theoretical physics based on internal structures, spectral invariants, and unified dynamical principles—without relying on background geometry. Our mission is to explore the functional origin of space, time, and matter.</p>
+
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:cesar.mello@udlab.org">cesar.mello@udlab.org</a></p>
+    <p>Website: <a href="https://www.udlab.org">www.udlab.org</a></p>
+  </section>
+
+  <footer>
+    &copy; 2025 Unified Dynamics Laboratory — All rights reserved.
+  </footer>
 </body>
 </html>
