--- a/index.html
+++ b/index.html
@@ -3,58 +3,95 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Unified Dynamics Laboratory (UDLab)</title>
+  <title>Unified Dynamics Laboratory — UDLab</title>
   <style>
     body {
-      font-family: sans-serif;
-      background-color: #f8f8f8;
-      color: #222;
+      font-family: "Segoe UI", sans-serif;
       margin: 0;
       padding: 0;
-      text-align: center;
+      background: #f8f9fa;
+      color: #222;
     }
     header {
-      background: #003366;
+      background: #002244;
       color: white;
-      padding: 40px 20px;
+      padding: 50px 20px;
+      text-align: center;
     }
-    h1 {
+    header h1 {
       margin: 0;
-      font-size: 2.5em;
+      font-size: 2.6em;
     }
-    section {
-      max-width: 800px;
+    header p {
+      font-size: 1.1em;
+      color: #cce0ff;
+    }
+    main {
+      max-width: 960px;
       margin: auto;
       padding: 40px 20px;
-      text-align: left;
     }
-    footer {
-      font-size: 0.9em;
-      color: #777;
-      padding: 20px;
+    section {
+      margin-bottom: 40px;
+    }
+    h2 {
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 6px;
+      color: #003366;
     }
     a {
       color: #003366;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      background: #eee;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+      color: #777;
     }
   </style>
 </head>
 <body>
+
   <header>
     <h1>Unified Dynamics Laboratory (UDLab)</h1>
-    <p>Independent Research in Foundational Physics</p>
+    <p>Independent Research in Spectral Physics, Internal Symmetry, and Structural Foundations</p>
   </header>
 
-  <section>
-    <h2>About</h2>
-    <p>The UDLab is dedicated to theoretical physics based on internal structures, spectral invariants, and unified dynamical principles—without relying on background geometry. Our mission is to explore the functional origin of space, time, and matter.</p>
+  <main>
+    <section id="about">
+      <h2>About</h2>
+      <p>UDLab is an independent theoretical initiative dedicated to exploring the internal structure of physical reality through functional dynamics, spectral invariants, and algebraic symmetries. Our work challenges background-dependent frameworks by reconstructing spacetime, matter, and gravitation from operator-theoretic principles.</p>
+    </section>
 
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:cesar.mello@udlab.org">cesar.mello@udlab.org</a></p>
-    <p>Website: <a href="https://www.udlab.org">www.udlab.org</a></p>
-  </section>
+    <section id="research">
+      <h2>Research</h2>
+      <p>Our focus includes the emergence of gravitational structure from spectral conservation, the algebraic encoding of entropy and energy, and the reconstruction of observables via functional collapse of modal hierarchies. All approaches avoid geometric postulates and aim for experimentally verifiable predictions.</p>
+    </section>
+
+    <section id="notebooks">
+      <h2>Interactive Notebooks</h2>
+      <p>Explore our [interactive notebooks](https://udlab.github.io#notebooks), published analyses, and ongoing developments at the intersection of symmetry, information, and internal structural dynamics in fundamental physics.</p>
+      <ul>
+        <li><a href="https://colab.research.google.com/github/udlab/udlab.github.io/blob/main/notebooks/file1.ipynb" target="_blank">🧪 file1.ipynb (Open in Colab)</a></li>
+        <li><a href="https://colab.research.google.com/github/udlab/udlab.github.io/blob/main/notebooks/file2.ipynb" target="_blank">🧪 file2.ipynb (Open in Colab)</a></li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>📧 <a href="mailto:cesar.mello@udlab.org">cesar.mello@udlab.org</a></p>
+      <p>🌐 <a href="https://www.udlab.org">www.udlab.org</a></p>
+    </section>
+  </main>
 
   <footer>
     &copy; 2025 Unified Dynamics Laboratory — All rights reserved.
   </footer>
+
 </body>
 </html>
