Fix markdown syntax in HTML and finalize homepage layout

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <section id="notebooks">
       <h2>Interactive Notebooks</h2>
-      <p>Explore our [interactive notebooks](https://udlab.github.io#notebooks), published analyses, and ongoing developments at the intersection of symmetry, information, and internal structural dynamics in fundamental physics.</p>
+      <p>Explore our <a href="https://udlab.github.io#notebooks">interactive notebooks</a>, published analyses, and ongoing developments at the intersection of symmetry, information, and internal structural dynamics in fundamental physics.</p>
       <ul>
         <li><a href="https://colab.research.google.com/github/udlab/udlab.github.io/blob/main/notebooks/file1.ipynb" target="_blank">🧪 file1.ipynb (Open in Colab)</a></li>
         <li><a href="https://colab.research.google.com/github/udlab/udlab.github.io/blob/main/notebooks/file2.ipynb" target="_blank">🧪 file2.ipynb (Open in Colab)</a></li>
@@ -92,6 +92,10 @@
   <footer>
     &copy; 2025 Unified Dynamics Laboratory — All rights reserved.
   </footer>
+
+</body>
+</html>
+
 
 </body>
 </html>
