--- a/index.html
+++ b/index.html
@@ -2,100 +2,56 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Unified Dynamics Laboratory — UDLab</title>
-  <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f8f9fa;
-      color: #222;
-    }
-    header {
-      background: #002244;
-      color: white;
-      padding: 50px 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.6em;
-    }
-    header p {
-      font-size: 1.1em;
-      color: #cce0ff;
-    }
-    main {
-      max-width: 960px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-    section {
-      margin-bottom: 40px;
-    }
-    h2 {
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 6px;
-      color: #003366;
-    }
-    a {
-      color: #003366;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    footer {
-      background: #eee;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
-      color: #777;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Unified Dynamics Laboratory (UDLab) — Spectral reformulation of physics.">
+  <title>Unified Dynamics Laboratory (UDLab)</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script type="text/javascript" id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
 
   <header>
     <h1>Unified Dynamics Laboratory (UDLab)</h1>
-    <p>Independent Research in Spectral Physics, Internal Symmetry, and Structural Foundations</p>
+    <p><strong>Reformulating fundamental physics from spectral and functional principles.</strong></p>
   </header>
 
-  <main>
-    <section id="about">
-      <h2>About</h2>
-      <p>UDLab is an independent theoretical initiative dedicated to exploring the internal structure of physical reality through functional dynamics, spectral invariants, and algebraic symmetries. Our work challenges background-dependent frameworks by reconstructing spacetime, matter, and gravitation from operator-theoretic principles.</p>
-    </section>
+  <section>
+    <h2>About</h2>
+    <p>
+      UDLab is an independent theoretical physics institute dedicated to the reformulation of fundamental laws through internally organized dynamics, spectral invariants, and functional unification. Our framework is grounded in algebraic consistency and operator theory, where physical observables emerge from the modal structure of compact self-adjoint operators — without invoking background geometry.
+    </p>
+  </section>
 
-    <section id="research">
-      <h2>Research</h2>
-      <p>Our focus includes the emergence of gravitational structure from spectral conservation, the algebraic encoding of entropy and energy, and the reconstruction of observables via functional collapse of modal hierarchies. All approaches avoid geometric postulates and aim for experimentally verifiable predictions.</p>
-    </section>
+  <section>
+    <h2>Highlights</h2>
+    <ul>
+      <li>Compact spectral formulations of gravitation and field theories</li>
+      <li>Operator-based unification of matter, energy, and entropy</li>
+      <li>Observable emergence from modal dominance and functional minimization</li>
+    </ul>
+  </section>
 
-    <section id="notebooks">
-      <h2>Interactive Notebooks</h2>
-      <p>Explore our <a href="https://udlab.github.io#notebooks">interactive notebooks</a>, published analyses, and ongoing developments at the intersection of symmetry, information, and internal structural dynamics in fundamental physics.</p>
-      <ul>
-        <li><a href="https://colab.research.google.com/github/udlab/udlab.github.io/blob/main/notebooks/file1.ipynb" target="_blank">🧪 file1.ipynb (Open in Colab)</a></li>
-        <li><a href="https://colab.research.google.com/github/udlab/udlab.github.io/blob/main/notebooks/file2.ipynb" target="_blank">🧪 file2.ipynb (Open in Colab)</a></li>
-      </ul>
-    </section>
+  <section>
+    <h2>Research and Notebooks</h2>
+    <p>
+      Explore our <a href="https://udlab.github.io#notebooks">interactive notebooks</a>, published analyses, and current developments at the intersection of symmetry, information, and internal spectral organization in modern physics.
+    </p>
+  </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>📧 <a href="mailto:cesar.mello@udlab.org">cesar.mello@udlab.org</a></p>
-      <p>🌐 <a href="https://www.udlab.org">www.udlab.org</a></p>
-    </section>
-  </main>
+  <section>
+    <h2>Contact</h2>
+    <p>
+      📧 Email: <a href="mailto:cesar.mello@udlab.org">cesar.mello@udlab.org</a><br/>
+      🔗 ORCID: <a href="https://orcid.org/0000-0002-6730-9593" target="_blank">0000-0002-6730-9593</a><br/>
+      🌐 Website: <a href="https://www.udlab.org">www.udlab.org</a>
+    </p>
+  </section>
 
   <footer>
-    &copy; 2025 Unified Dynamics Laboratory — All rights reserved.
+    <p><small>© 2025 Unified Dynamics Laboratory — All rights reserved.</small></p>
   </footer>
-
-</body>
-</html>
-
 
 </body>
 </html>
